--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "dashel"]
 	path = dashel
 	url = https://github.com/aseba-community/dashel.git
+	branch = master
 [submodule "enki"]
 	path = enki
 	url = https://github.com/enki-community/enki.git
+	branch = master
 [submodule "aseba"]
 	path = aseba
 	url = https://github.com/aseba-community/aseba.git
+	branch = master
