--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = aseba
 	url = https://github.com/davidjsherman/aseba.git
 	branch = master
+[submodule "packager/inirobot"]
+	path = packager/inirobot
+	url = https://github.com/davidjsherman/inirobot-windows.git
